# heelonvault-core

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  Cargo.toml  HeelonVault.code-workspace  LICENSE  NOTICE  README.en.md  README.md  SECURITY.fr.md  SECURITY.md  build.rs  clippy.toml  deny.toml  heelonvault.desktop  sbom.cyclonedx.json
.cargo/: config.toml
.github/: CI-GOVERNANCE.md  SPRINT_TRACKING.md  copilot-instructions.md
assets/: gresources.xml  style.css
crates/heelonvault-app/: Cargo.toml  build.rs
crates/heelonvault-app/src/: main.rs
crates/heelonvault-app/src/ui/: license_badge.rs  messages.rs  mod.rs  window_sizing.rs
crates/heelonvault-app/src/ui/dialogs/: add_edit_dialog.rs  backup_dialog.rs  import_progress_dialog.rs  manage_teams_dialog.rs  manage_users_dialog.rs  recovery_key_export_dialog.rs  trash_dialog.rs
crates/heelonvault-app/src/ui/dialogs/add_edit_dialog/parts/: build_inline_body.inc  build_inline_part1.rs  build_inline_part2.rs
crates/heelonvault-app/src/ui/dialogs/login_dialog/: bootstrap_flow.rs  core.rs  feedback.rs  lock_state.rs  login_flow.rs  restore_flow.rs  types.rs  window_state.rs
crates/heelonvault-app/src/ui/dialogs/login_dialog/parts/: new_body.inc
crates/heelonvault-app/src/ui/dialogs/pin_setup_dialog/: mod.rs
crates/heelonvault-app/src/ui/dialogs/pin_setup_dialog/parts/: new_body.inc
crates/heelonvault-app/src/ui/dialogs/pin_unlock_dialog/: mod.rs
crates/heelonvault-app/src/ui/dialogs/pin_unlock_dialog/parts/: new_body.inc
crates/heelonvault-app/src/ui/widgets/: mod.rs  password_strength_bar.rs  secret_card.rs
crates/heelonvault-app/src/ui/windows/main_window/: center.rs  certification.rs  header.rs  impl_new.rs  impl_post.rs  impl_preamble.rs  mod.rs  search_filter.rs  secret_flow.rs  shell.rs  sidebar.rs  types.rs
crates/heelonvault-app/src/ui/windows/main_window/impl_core_parts/: new_body.inc
crates/heelonvault-app/src/ui/windows/main_window/profile_view/: core.rs  mod.rs
crates/heelonvault-app/src/ui/windows/main_window/profile_view/parts/: build_profile_view_body.inc
crates/heelonvault-app/tests/: twofa_messages_integration.rs
crates/heelonvault-core/: Cargo.toml  README.md
crates/heelonvault-core/src/: app.rs  i18n.rs  lib.rs
crates/heelonvault-core/src/config/: constants.rs
crates/heelonvault-core/src/models/: audit_log.rs  license.rs  mod.rs  secret_item.rs  user.rs  vault.rs
crates/heelonvault-core/src/repositories/: ip_rate_limit_repository.rs  mod.rs  secret_repository.rs  user_repository.rs  vault_repository.rs
crates/heelonvault-core/src/services/: access_control.rs  admin_service.rs  audit_log_service.rs  audit_report_provider.rs  auth_service.rs  backup_application_service.rs  backup_service.rs  crypto_service.rs  federated_auth_service.rs  import_service.rs  ip_rate_limit_service.rs  license_service.rs  login_history_service.rs  mod.rs  password_service.rs  pin_cache_service.rs  secret_service.rs  team_service.rs  totp_service.rs  user_service.rs  vault_service.rs
crates/heelonvault-core/src/ui/: window_sizing.rs
crates/heelonvault-core/src/ui/dialogs/: add_edit_dialog.rs  backup_dialog.rs  import_progress_dialog.rs  manage_users_dialog.rs  recovery_key_export_dialog.rs  trash_dialog.rs
crates/heelonvault-core/src/ui/dialogs/add_edit_dialog/parts/: build_inline_body.inc  build_inline_part2.rs
crates/heelonvault-core/src/ui/dialogs/login_dialog/: bootstrap_flow.rs  core.rs  feedback.rs  login_flow.rs  types.rs
crates/heelonvault-core/src/ui/dialogs/login_dialog/parts/: new_body.inc
crates/heelonvault-core/src/ui/dialogs/pin_setup_dialog/: mod.rs
crates/heelonvault-core/src/ui/dialogs/pin_setup_dialog/parts/: new_body.inc
crates/heelonvault-core/src/ui/dialogs/pin_unlock_dialog/: mod.rs
crates/heelonvault-core/src/ui/dialogs/pin_unlock_dialog/parts/: new_body.inc
crates/heelonvault-core/src/ui/widgets/: password_strength_bar.rs  secret_card.rs
crates/heelonvault-core/src/ui/windows/: mod.rs  security_dashboard_window.rs
crates/heelonvault-core/src/ui/windows/main_window/: center.rs  certification.rs  impl_new.rs  impl_post.rs  mod.rs  secret_flow.rs  shell.rs  sidebar.rs
crates/heelonvault-core/src/ui/windows/main_window/impl_core_parts/: new_body.inc
crates/heelonvault-core/src/ui/windows/main_window/profile_view/: core.rs
crates/heelonvault-core/src/utils/: mod.rs  sqlx_helpers.rs
crates/heelonvault-core/tests/: ip_rate_limit_integration.rs  log_markers_unit.rs  secret_multivault_edit_integration.rs  security_auth.rs  security_crypto.rs  security_sql_injection.rs  totp_activation_integration.rs  twofa_messages_integration.rs
crates/heelonvault-core/tests/common/: mod.rs
crates/heelonvault-premium/: Cargo.toml
crates/heelonvault-premium/src/services/: admin_service_impl.rs  audit_log_service_impl.rs  audit_report_service.rs  license_service.rs  mod.rs  team_service_impl.rs
crates/heelonvault-premium/tests/: multiuser_rbac_integration.rs  secret_multivault_edit_integration.rs
crates/sqlx-shim/: Cargo.toml
crates/sqlx-shim/src/: lib.rs
data/: .gitkeep  README.fr.md  README.md
docs/: ARCHITECTURE.en.md  ARCHITECTURE.md  CHANGELOG.en.md  CHANGELOG.md  CI_OPTIMIZATION_PLAN.md  LEGAL.md  MASTER_KEY_ROTATION_HARDENING_SPEC.md  QUICKSTART.fr.md  QUICKSTART.md  README.md  RUNBOOK_WINDOWS_PACKAGING.md  THIRD_PARTY_LICENSES.fr.md  THIRD_PARTY_LICENSES.md  UPDATE_GUIDE.en.md  UPDATE_GUIDE.md  USER_GUIDE.en.md  USER_GUIDE.md
linux/: apprun.sh  heelonvault.desktop
macos/: Info.plist  launcher.sh
migrations/: 0001_init_schema.sql  0002_db_metadata_schema_version.sql  0003_secret_item_extensions.sql  0004_user_profile_fields.sql  0005_auth_policy.sql  0006_auth_policy_auto_lock_delay.sql  0007_login_history.sql  0008_user_show_passwords_in_edit.sql  0009_user_totp_secret.sql  0010_user_preferred_language.sql  0011_teams.sql  0012_vault_key_shares.sql  0013_audit_log.sql  0014_vault_security_rbac.sql  0015_vault_sort_order.sql  0016_ip_rate_limiting.sql
scripts/: README.fr.md  (+20 more)
(+85 files in other folders)
