[package]
name = "heelonvault-rust"
version = "1.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["ppaperso <ppaperso@users.noreply.github.com>"]
license = "Apache-2.0"
description = "HeelonVault — Security-first password manager built with Rust and GTK4/Libadwaita"
homepage = "https://github.com/ppaperso/HeelonVault"
repository = "https://github.com/ppaperso/HeelonVault"
readme = "README.md"
keywords = ["password-manager", "vault", "gtk4", "security", "encryption"]
categories = ["cryptography", "authentication"]

[[bin]]
name = "heelonvault"
path = "src/main.rs"

[features]
default = []

[dependencies]
gio = "0.20"
# anyhow : utilise uniquement dans main.rs (point d'entree binaire) pour la glue
# de haut niveau. Choix intentionnel : anyhow pour l'assemblage, thiserror pour
# les erreurs de bibliotheque. Ne pas etendre aux services/repositories.
anyhow = "1.0"
aes-gcm = "0.10"
argon2 = "0.5"
getrandom = "0.3"
gtk4 = "0.9"
libadwaita = { version = "0.7", features = ["v1_2"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# datetime — deux bibliotheques coexistent deliberement :
# - chrono : horodatage local (logs, UI, parsing RFC3339, timestamps metier)
#   Raison : time::UtcOffset::current_local_offset() est unsound en contexte
#   multi-thread Unix (race avec localtime_r/getenv). Ce projet utilise Tokio
#   multi-thread + std::env::set_var dans les tests — le risque est reel.
# - time : uniquement pour le calcul expires_at UTC dans add_edit_dialog.rs
#   (OffsetDateTime::now_utc() + Duration::days). Aucun usage d'offset local.
#   Present aussi comme dependance transitive de sqlx (feature time).
sqlx = { path = "crates/sqlx-shim" }
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync"] }
totp-rs = { version = "5.6", features = ["gen_secret", "otpauth"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
trait-variant = "0.1"
uuid = { version = "1.16", features = ["serde", "v4"] }
zeroize = "1.8"
zxcvbn = "2.2"
chrono = { version = "0.4", features = ["std"] }
bip39 = "2.1"
base64 = "0.22"
csv = "1.3"
qrcode = "0.14"
image = { version = "0.25", features = ["png"] }
url = "2.5"
ed25519-dalek = { version = "2.1", features = ["std"] }
hex = "0.4"
fluent-templates = "0.9"
unic-langid = "0.9"
genpdf = { version = "0.2", features = ["images"] }
dirs = "5.0"
sha2 = "0.10"

[build-dependencies]
glib-build-tools = "0.20"

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"
rstest = "0.24"
tempfile = "3"
