[package]
name = "heelonvault-core"
version = "1.1.0"
edition = "2021"
rust-version = "1.95"
authors = ["ppaperso <ppaperso@users.noreply.github.com>"]
license = "Apache-2.0"
description  = "Core cryptography and storage library for HeelonVault"
repository   = "https://github.com/ppaperso/HeelonVault"
keywords     = ["password-manager", "vault", "cryptography", "sqlite"]
categories   = ["cryptography", "database"]
documentation = "https://docs.rs/heelonvault-core"
readme       = "README.md"

[lib]
name = "heelonvault_core"
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio", "tls-rustls-ring-webpki", "sqlite", "migrate", "time", "uuid"
] }

# --- Cryptographie & sécurité mémoire ---
aes-gcm       = "0.10"
argon2        = "0.5"
base64        = "0.22"
bip39         = "2.1"
getrandom     = "0.3"
hex           = "0.4"
secrecy       = "0.10"
sha2          = "0.10"
zeroize       = "1.8"

# --- Sérialisation ---
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Gestion d'erreurs (types de bibliothèque) ---
thiserror = "2.0"

# --- Async & traits ---
tokio         = { version = "1.44", features = ["macros", "rt-multi-thread", "sync"] }
trait-variant = "0.1"

# --- Datetime ---
chrono = { version = "0.4", features = ["std"] }
time   = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# --- Import CSV / données ---
csv         = "1.3"
encoding_rs = "0.8"
url         = "2.5"

# --- Système de fichiers ---
dirs = "5.0"

# --- Internationalisation ---
fluent-templates = "0.9"
unic-langid      = "0.9"

# --- TOTP & QR Code ---
totp-rs = { version = "5.6", features = ["gen_secret", "otpauth"] }
qrcode  = { version = "0.14", default-features = false, features = ["image"] }
image   = { version = "0.25", default-features = false, features = ["png"] }

# --- Utilitaires ---
uuid    = { version = "1.16", features = ["serde", "v4"] }
zxcvbn  = "2.2"

# Instrumentation (macros info!/warn!/error! uniquement — pas d'init subscriber)
tracing = "0.1"

[dev-dependencies]
criterion  = "0.5"
proptest   = "1.6"
rstest     = "0.24"
tempfile   = "3"
# Init subscriber pour les tests uniquement (ne jamais init dans le code de lib)
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
