[package]
name = "heelonvault-premium"
version = "1.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["ppaperso <ppaperso@users.noreply.github.com>"]
license = "Apache-2.0"
description = "HeelonVault — Implémentations Premium (admin multi-utilisateurs, équipes, audit)"
repository = "https://github.com/ppaperso/HeelonVault"

[lib]
name = "heelonvault_premium"
path = "src/lib.rs"

[dependencies]
# Bibliothèque core HeelonVault (traits, modèles, dépôts, erreurs, i18n).
# La feature "licensing" est activée car AuditReportService dépend de LicenseService.
heelonvault-core = { path = "../heelonvault-core", features = ["licensing"] }

# SQLx (même shim que le workspace — accès BD dans AuditReportService)
sqlx = { path = "../sqlx-shim" }

# Cryptographie / sécurité mémoire
getrandom = "0.3"
secrecy   = "0.10"

# UUID
uuid = { version = "1.16", features = ["v4", "serde"] }

# Datetime (rapport d'audit PDF)
chrono = { version = "0.4", features = ["std"] }

# Async / runtime (Handle::block_on dans AuditReportService)
tokio = { version = "1.44", features = ["rt", "macros"] }

# Hachage (SHA-256 du rapport d'audit)
sha2 = "0.10"
hex  = "0.4"

# Système de fichiers (PDF → dossier Téléchargements)
dirs = "5.0"

# Instrumentation
tracing = "0.1"

[dev-dependencies]
# Tests d'intégration premium
tempfile   = "3"
sqlx       = { path = "../sqlx-shim" }
tokio      = { version = "1.44", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
