[package]
name = "sqlx"
version = "0.9.0"
edition = "2021"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
sqlx-core = { version = "0.9", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "migrate", "time", "uuid"] }
sqlx-sqlite = { version = "0.9", default-features = false, features = ["bundled", "migrate", "time", "uuid"] }
